<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ir.hosseini.shalimanagment.ui.SubmittedShalis.SubmittedShalisFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_submitted_shalis" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ir.hosseini.shalimanagment.ui.SubmittedRices.SubmittedRicesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_submitted_rices" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ir.hosseini.shalimanagment.ui.ReceivedRices.ReceivedRicesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_received_rices" />
</navigation>
