<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_yekan_extra_bold"
            android:text="@string/add_rice"
            android:textSize="@dimen/title_text"
            android:textColor="@color/color4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--
        ("makan_berenj")
("vazn_nimdane") int
("karmozd") int karm
("tozihat") int tozi
("nam_ijad_konande")
        -->

        <EditText
            android:id="@+id/tedad_kise_berenj_inp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="0"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="64dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:background="@drawable/round_btn_inp"
            android:inputType="textPersonName"
            android:fontFamily="@font/iran_yekan_medium"
            android:gravity="right|center_vertical"
            android:paddingRight="15dp"
            android:hint="@string/rice_kise_count"
            android:textColor="@color/color4"
            android:textSize="18sp"
            android:imeOptions="actionNext"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/vazn_kise_berenj_inp"
            android:autofillHints="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="64dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:background="@drawable/round_btn_inp"
            android:ems="10"
            android:fontFamily="@font/iran_yekan_medium"
            android:gravity="right|center_vertical"
            android:hint="@string/rice_kise_weight"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:paddingRight="15dp"
            android:textColor="@color/color4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tedad_kise_berenj_inp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/vazn_ezafe_inp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="64dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:width="0dp"
            android:autofillHints="0"
            android:background="@drawable/round_btn_inp"
            android:ems="10"
            android:fontFamily="@font/iran_yekan_medium"
            android:gravity="right|center_vertical"
            android:hint="@string/remaining_weight"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:paddingRight="15dp"
            android:textColor="@color/color4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vazn_kise_berenj_inp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/tedad_kise_saboos_inp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="64dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:width="0dp"
            android:autofillHints="0"
            android:background="@drawable/round_btn_inp"
            android:ems="10"
            android:fontFamily="@font/iran_yekan_medium"
            android:gravity="right|center_vertical"
            android:hint="@string/saboos_kise_count"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:paddingRight="15dp"
            android:textColor="@color/color4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vazn_ezafe_inp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />


        <EditText
            android:id="@+id/shali_place_inp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="64dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:width="0dp"
            android:autofillHints="0"
            android:background="@drawable/round_btn_inp"
            android:ems="10"
            android:fontFamily="@font/iran_yekan_medium"
            android:gravity="right|center_vertical"
            android:hint="@string/shali_place"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingRight="15dp"
            android:textColor="@color/color4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driver_inp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/phone_inp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="64dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:width="0dp"
            android:autofillHints="0"
            android:background="@drawable/round_btn_inp"
            android:ems="10"
            android:fontFamily="@font/iran_yekan_medium"
            android:gravity="right|center_vertical"
            android:hint="@string/phone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:paddingRight="15dp"
            android:textColor="@color/color4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tedad_kise_saboos_inp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />


        <EditText
            android:id="@+id/driver_inp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="64dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:width="0dp"
            android:autofillHints="0"
            android:background="@drawable/round_btn_inp"
            android:ems="10"
            android:fontFamily="@font/iran_yekan_medium"
            android:gravity="right|center_vertical"
            android:hint="@string/driver"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingRight="15dp"
            android:textColor="@color/color4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_inp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />


        <!--        <Button-->
        <!--            android:id="@+id/button2"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="48dp"-->
        <!--            android:layout_marginTop="48dp"-->
        <!--            android:background="@drawable/submit_btn"-->
        <!--            android:drawableLeft="@drawable/save_24px"-->
        <!--            android:fontFamily="@font/iran_yekan_bold"-->
        <!--            android:text="@string/submit"-->
        <!--            app:layout_constraintRight_toRightOf="parent"-->
        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/driver_inp"-->
        <!--            tools:ignore="RtlHardcoded,RtlSymmetry"/>-->

        <androidx.cardview.widget.CardView
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shali_place_inp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/iran_yekan_medium"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp">


                <ImageView
                    android:id="@+id/save_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_save_black_24dp"
                    tools:ignore="ContentDescription,RtlHardcoded" />

                <TextView
                    android:id="@+id/save_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:fontFamily="@font/iran_yekan_extra_bold"
                    android:text="@string/submit"
                    android:textColor="@color/color4"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <view
            android:id="@+id/view"
            class="android.widget.TextView"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>